# idoven-challenge

./: README.md  e2e_test.py  pyproject.toml  test.sh
src/: database.py  main.py  settings.py
src/authentication/: crud.py  models.py  routers.py  schemas.py  utils.py
src/ecg/: crud.py  models.py  routers.py  schemas.py
